# cpp-inference

./: CMakeLists.txt  README.md
configs/: test.json
include/cpp-inference/: config.h
src/: main.cpp
